--- a/pages/popup/popup.scss
+++ b/pages/popup/popup.scss
@@ -29,12 +29,31 @@ footer {
 }
 
 a {
-    color: #21a3f3; 
-    text-decoration: none; 
-    transition: color 0.3s ease, text-decoration 0.3s ease; 
-  
+    color: #109feb;
+    text-decoration: none;
+    transition:
+        color 0.3s ease,
+        text-decoration 0.3s ease;
+
     &:hover {
-      color: #1e90ff; 
-      text-decoration: underline; 
+        color: #1a71c9;
+        text-decoration: underline;
     }
-  }
+}
+
+.preview-container {
+    position: relative;
+    height: 70px; 
+    overflow: hidden;
+    display: inline-block;
+
+    &::after {
+        content: '';
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        height: 20px; /* Height of the fade effect */
+        background: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1));
+    }
+}
