--- a/pages/popup/popup.scss
+++ b/pages/popup/popup.scss
@@ -23,6 +23,10 @@ footer {
     }
 }
 
+form {
+    margin-block-end: unset;
+}
+
 .hint {
     margin-top: 0.25rem !important;
     font-size: 0.8rem;
@@ -55,5 +59,9 @@ a {
         right: 0;
         height: 20px; /* Height of the fade effect */
         background: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1));
+    }
+
+    .preview-error {
+        color: #808080;
     }
 }
