--- a/pages/popup/issue-list.scss
+++ b/pages/popup/issue-list.scss
@@ -8,11 +8,14 @@
 .jira-issues {
   font-size: 12px;
   width: 100%;
+  table-layout: auto;
   border-collapse: collapse;
+  color: #4a90e2;
 
   tbody tr {
     cursor: pointer;
     transition: background 0.2s, color 0.2s;
+    color: #4a90e2;
 
     &:hover {
       background: #f0f8ff;
@@ -27,25 +30,32 @@
 }
 
 .jira-summary {
-  padding-left: 10px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  width: 100%;
+  max-width: 1px;
 }
 
 .jira-status {
   background: #e0e0e0;
-  padding: 2px 6px;
+
   border-radius: 4px;
   font-size: 10px;
   font-weight: bold;
-  max-width: 80px;
   text-align: center;
   white-space: nowrap;
+  color: #444;
+  display: inline-block;
+  width: auto;
+  height: auto;
+  margin: 3px 0;
+  line-height: 1;
 }
 
+
 .jira-my-issue {
-  background: #e3f2fd !important;
+  background: #e3f2fd;
   font-weight: bold;
   border-radius: 5px;
 }
@@ -56,8 +66,4 @@
 
 .has-open-tab .jira-tab-icon .tab-icon {
   visibility: visible;
-}
-
-.d-none {
-  display: none;
 }
