--- a/pages/popup/popup.scss
+++ b/pages/popup/popup.scss
@@ -58,6 +58,10 @@ header {
             box-shadow: 0 0 8px rgba(0, 123, 255, 0.2); /* Light focus effect */
             outline: none; /* Remove default outline */
         }
+
+        &::placeholder {
+            color: #aaa;
+        }
     }
 
     button.go-button {
