--- a/pages/popup/issue-list.scss
+++ b/pages/popup/issue-list.scss
@@ -108,3 +108,31 @@
     width: 40%;
   }
 }
+
+/* loading */
+
+.jira-loading-bar {
+  position: relative;
+  overflow: hidden;
+  height: 1px;
+  border-radius: 2px;
+}
+
+.jira-loading-bar::before {
+  content: "";
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background: linear-gradient(to right, #e98ebb, #cfb7fc, #e98cba);
+  animation: loading-animation 1.5s infinite linear;
+}
+
+@keyframes loading-animation {
+  0% {
+    transform: translateX(-100%);
+  }
+
+  100% {
+    transform: translateX(100%);
+  }
+}
