--- a/pages/popup/issue-list.scss
+++ b/pages/popup/issue-list.scss
@@ -4,6 +4,8 @@
   border-radius: 8px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   min-height: 83px;
+  max-height: 175px;
+  overflow: auto;
 }
 
 .jira-issues {
