--- a/jira-pages/common/style.css
+++ b/jira-pages/common/style.css
@@ -1,11 +1,11 @@
-
 .header-message-container {
     display: flex;
-    justify-content: center;
-    flex-grow: 1;
+    /* justify-content: center; */
+    /* flex-grow: 1; */
 }
 
 .header-message {
+    margin-left: 50px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -14,17 +14,17 @@
     border-radius: 4px;
     border: 1px solid #ffbdad;
     background-color: #ffebe6;
-    color: #6B778C;
+    color: #6b778c;
     font-weight: 500;
 }
 
 .header-message.has-due-date {
-    background-color: #F4F5F7;
+    background-color: #f4f5f7;
     border: 1px solid transparent;
 }
 
 .header-message.no-due-date {
-    color: #DE350B;
-    background-color: #FFEBE6;
-    border: 1px solid #FFBDAD;
+    color: #b35b00;
+    background-color: #fff4e5;
+    border: 1px solid #ffe2b3;
 }
