--- a/pages/popup/issue-list.scss
+++ b/pages/popup/issue-list.scss
@@ -1,10 +1,9 @@
-.jira-popup {
+.issues-table-container {
   background: #fff;
   padding: 4px;
   border-radius: 8px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-  min-height: 83px;
-  max-height: 176px;
+  height: 174px;
   overflow: auto;
 }
 
