Update to version 2.1.0: - Add clipboard access - Auto-filling popup input in case clipboard text matches jira issue format

--- a/src/pages/popup/popup.scss
+++ b/src/pages/popup/popup.scss
@@ -70,6 +70,11 @@ main {
         &::placeholder {
             color: #aaa;
         }
+
+        &::selection {
+            background: #b3e0ff; // Soft blue
+            color: #1e3a8a;      // Deep blue text for contrast
+        }
     }
 
     button.go-button {
